[workspace]
resolver = "2"
members = [
    "graphite-core",
]
default-members = ["graphite-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Graphite Contributors"]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
crc32fast = "1"
lz4_flex = "0.11"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync", "time"] }
rand = "0.8"
