[workspace]
resolver = "2"
members = [
    "graphite-core",
    "graphite",
    "graphite-py",
    "graphite-bench",
]
default-members = ["graphite"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Graphite Contributors"]

[workspace.dependencies]
graphite-core = { path = "graphite-core" }
graphite = { path = "graphite" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
crc32fast = "1"
lz4_flex = "0.11"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync", "time"] }
rand = "0.8"
zstd = "0.13"
