[workspace]
resolver = "2"
members = [
    "graphite-core",
    "graphite",
    "graphite-py",
    "graphite-bench",
    "graphite-cli",
    "graphite-server",
]
default-members = ["graphite"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Graphite Contributors"]
repository = "https://github.com/DDVHegde100/graphite-tsdb"
homepage = "https://github.com/DDVHegde100/graphite-tsdb"
documentation = "https://docs.rs/graphite"

[workspace.dependencies]
graphite-core = { path = "graphite-core" }
graphite = { path = "graphite" }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
crc32fast = "1"
lz4_flex = "0.11"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync", "time"] }
rand = "0.8"
zstd = "0.13"
