[package]
name = "graphite-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "graphite_bench"
path = "src/lib.rs"

[dependencies]
graphite.workspace = true
graphite-core.workspace = true
tempfile = "3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
duckdb = { version = "1", optional = true }

[features]
compare-duckdb = ["dep:duckdb"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "compare_write"
path = "src/bin/compare_write.rs"

[[bench]]
name = "write_throughput"
harness = false

[[bench]]
name = "point_query"
harness = false

[[bench]]
name = "range_scan"
harness = false
