[package]
name = "graphite-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for Graphite TSDB"
publish = false

[[bin]]
name = "graphite"
path = "src/main.rs"

[dependencies]
graphite.workspace = true
graphite-core.workspace = true
clap.workspace = true
serde_json = "1"
