[package]
name = "graphite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core LSM-tree storage engine for Graphite TSDB"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json = "1"
bytes.workspace = true
crc32fast.workspace = true
lz4_flex.workspace = true
parking_lot.workspace = true
tokio.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3"
