[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "graphite-tsdb"
version = "0.1.0"
description = "Embeddable time-series database for financial tick data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database",
]
dependencies = [
    "numpy>=1.20",
    "polars>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "maturin"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "graphite_tsdb"
python-source = "python"
