[package]
name = "graphite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Embeddable time-series database for financial tick data"

[dependencies]
graphite-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
