[package]
name = "graphite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Embeddable time-series database for financial tick data"

[features]
default = []
cold-tier = ["graphite-core/cold-tier"]

[dependencies]
graphite-core = { workspace = true, features = ["cold-tier"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
